targets/srv0/k3s/sonarr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`sonarr.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-prod-tls
